# md-task

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  dev-reset.sh  dev-tasks.md  install.sh  local-tasks.md  md-task.toml  rustfmt.toml  tasks.md  test-tasks.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
docs/: development_log.md
src/: config.rs  main.rs  task.rs
tests/: config_test.rs  task_test.rs
